--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pull-vinyl",
-  "description": "Read and write Vinyl objects from file system in pull streams.",
+  "description": "Read and write `Vinyl` objects in the file system.",
   "version": "0.1.0",
   "homepage": "https://github.com/jamen/pull-vinyl",
   "author": "Jamen Marz (https://github.com/jamen)",
