--- a/package.json
+++ b/package.json
@@ -26,17 +26,10 @@
     "fs"
   ],
   "scripts": {
-    "test": "tape 'test/*.js' | tap-spec"
+    "test": "tape 'test/*.js'"
   },
   "devDependencies": {
-    "eslint": "^3.8.1",
-    "eslint-config-standard": "^6.2.0",
-    "eslint-plugin-promise": "^3.3.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "mkdirp": "^0.5.1",
-    "pull-stream": "^3.4.5",
     "rimraf": "^2.5.4",
-    "tap-spec": "^4.1.1",
     "tape": "^4.6.2"
   },
   "dependencies": {
